Uzupelnienie zajec o statystykach i poprawa literowek

--- a/05_lab.ipynb
+++ b/05_lab.ipynb
@@ -559,25 +559,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## min"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "-"
     }
    },
    "outputs": [],
    "source": [
     "X = randn(3,5)\n",
     "\n",
-    "\n",
-    "[a ia]= min(X)\n",
-    "\n",
-    "% minimim w wierszach\n",
-    "a1 = min(X, [], 2)\n",
-    "\n",
-    "% minimim parami elementów\n",
-    "a2 = min(X, zeros(size(X)))"
+    "a = min(X)\n",
+    "z = min(min(X))"
    ]
   },
   {
@@ -590,24 +595,49 @@
    },
    "outputs": [],
    "source": [
-    "b = mean(X)\n",
+    "% drugi argument wyjściowy to indeksy\n",
+    "[a ind]= min(X)\n",
     "\n",
-    "# średnia w wierszach\n",
-    "b1 = mean(X, 2)"
+    "printf('Min. wartość w kolumnie 2 to %f\\n', X(ind(2), 2))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "% minimim w wierszach\n",
+    "b = min(X, [], 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "% minimim parami elementów\n",
+    "c = min(X, zeros(size(X)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
    "source": [
-    "X = randn(3,5)  \n",
-    "c = std(X)"
+    "# mean, std, var"
    ]
   },
   {
@@ -620,12 +650,75 @@
    },
    "outputs": [],
    "source": [
+    "X = randn(3,5)\n",
+    "\n",
+    "% średnia wartośc w kolumnach\n",
+    "a = mean(X)\n",
+    "\n",
+    "# średnia w wierszach\n",
+    "b = mean(X, 2)\n",
+    "\n",
+    "# średnia ze wszystkich wartości macierzy\n",
+    "c = mean(X(:))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# odchylenie standardowe\n",
+    "s = std(X)\n",
+    "\n",
+    "# wariancja\n",
+    "v = var(X)\n",
+    "s2 = sqrt(v)   # sdt = sqrt(var)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## mode, median"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "X = randi(10, 5, 3)\n",
+    "\n",
     "d = median(X)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mediana to środkowa wartość po posortowaniu\n",
+    "a = sort(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -633,8 +726,8 @@
    },
    "outputs": [],
    "source": [
-    "X = 1:10;\n",
-    "X(2:2:10) = 13\n",
+    "X = randi(3, 5, 3)\n",
+    "# wartość domunująca\n",
     "e = mode(X)"
    ]
   },
@@ -648,12 +741,15 @@
    "source": [
     "**Ćwiczenie** wczytaj dane `carsmall` i wykonaj następujące operacje:\n",
     "\n",
-    "* sprawdź, czy zmienne dane zawierają wartości brakujące (oznaczone jako `NaN`) \n",
-    "* usuń wartości brakujące ze zmiennej `MPG` i wyznacz jej wartość średnią i odchylenie\n",
+    "* sprawdź, czy zmienne zawierają wartości brakujące (oznaczone jako `NaN`) \n",
+    "* usuń wartości brakujące ze zmiennej `MPG` i wyznacz jej wartość średnią, odchylenie i medianę\n",
     "* wyznacz wartość średnią `MPG` dla samochodów z roku 82 (`Model_year`)\n",
     "* wyznacz najczęściej występujący rocznik\n",
+    "* ile jest różnych (unikatowych) wartości zmiennej `Cylinders` (zob. funkcję `unique()`)\n",
+    "* wypisz w kolejności od największej do najmniejszej wartości przyśpieszenia `Acceleration`\n",
     "\n",
-    "Dane dla Octave: https://www.fizyka.umk.pl/~grochu/pp2/carsmall.mat"
+    "W Matlabie dane można wczytać polecaniem `load carsmall`.   \n",
+    "Jeżeli zbiór danych nie jest dostępny (np. w Octave) to pobierz go stąd: https://www.fizyka.umk.pl/~grochu/pp2/carsmall.mat  "
    ]
   },
   {
@@ -701,6 +797,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hist(MPG, 20)   % liczba przedziałow 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -709,7 +814,7 @@
    "outputs": [],
    "source": [
     "boxplot(MPG);\n",
-    "% uwaga: w octave moze byc wymagane doinstalowanie pakietu statystycznego\n",
+    "% uwaga: w octave może być wymagane odinstalowanie pakietu statystycznego\n",
     "% pkg load statistics"
    ]
   },
@@ -719,7 +824,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "boxplot(Acceleration, Model_Year);"
+    "% wykres Acceleration w grupach utworzonych przez Model_Year\n",
+    "boxplot(Acceleration, Model_Year);   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Wykres rozrzutu"
    ]
   },
   {
@@ -727,7 +844,7 @@
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -745,38 +862,36 @@
    },
    "outputs": [],
    "source": [
-    "unique(Cylinders)\n",
-    "\n",
+    "## Wykres rozrzutu w grupach"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "unique(Cylinders)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
     "plot(Acceleration(Cylinders == 4), Horsepower(Cylinders==4), 'o')\n",
-    "hold on \n",
+    "hold on  % zachowanie wykresu, kolejna funkcja plot() doda punty na aktyalny wykres\n",
     "plot(Acceleration(Cylinders == 6), Horsepower(Cylinders==6), 'x')\n",
     "plot(Acceleration(Cylinders == 8), Horsepower(Cylinders==8), 's')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "bar([sum(Cylinders == 4) sum(Cylinders == 6) sum(Cylinders == 8)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "pie([sum(Cylinders == 4) sum(Cylinders == 6) sum(Cylinders == 8)])"
    ]
   },
   {
@@ -803,11 +918,48 @@
     }
    },
    "source": [
+    "## Wykres słupkowy i kołowy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "bar([sum(Cylinders == 4) sum(Cylinders == 6) sum(Cylinders == 8)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "pie([sum(Cylinders == 4) sum(Cylinders == 6) sum(Cylinders == 8)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## Zadanie 6 Regresja liniowa\n",
     "\n",
     "Napisz funkcję o nazwie `regresja`, która dla danych wektorów $x$ i $y$ zwróci współczynniki $a$ i $b$ określające linię prostą $y = a x + b$ dopasowaną do danych $x$ i $y$ za pomocą metody najmniejszych kwadratów. \n",
     "\n",
-    "Dla danych $x_i$ i $y_i$ współczynniki $a$ i $b$ wyznacz ze wzoru:\n",
+    "Dla danych $x_i$ i $y_i$ (gdzie $i=1,2,\\ldots,n$) współczynniki $a$ i $b$ wyznacz ze wzoru:\n",
     "\n",
     "$$\n",
     "a=\\frac{\\sum_{i=1}^{n}\\left(x_{i}-\\bar{x}\\right)\\left(y_{i}-\\bar{y}\\right)}{\\sum_{i=1}^{n}\\left(x_{i}-\\bar{x}\\right)^{2}}\n",
