--- a/06_strings.ipynb
+++ b/06_strings.ipynb
@@ -10,10 +10,10 @@
    "source": [
     "# Napisy (łańcuchy znakowe)\n",
     "\n",
-    "* napisy to ciąg zanaków umieszczony między `'apostrofami'` \n",
+    "* napisy to ciąg znaków umieszczony między `'apostrofami'` \n",
     "* napis w Matlab to wektor znaków\n",
     "* macierz znakowa - macierz zawierająca napisy w wierszach, wiersze macierzy posiadają tyle samo elementów, więc krótsze napisy są wypełnione blankami/spacjami\n",
-    "* od Matlab R2016 także obiekt `string` (ale my zajmiemy się wylko tablcami znaków)\n"
+    "* od Matlab R2016 istnieje także obiekt (typ) `string`, który reprezentuje napisy umieszczone w `\"cudzysłowach\"` (ale my zajmiemy się tylko tablicami znaków)\n"
    ]
   },
   {
@@ -28,7 +28,7 @@
    "source": [
     "napis = 'Ala ma kota'\n",
     "a = length(napis)\n",
-    "whos napis"
+    "whos napis "
    ]
   },
   {
@@ -68,14 +68,15 @@
     "a = napis(1)\n",
     "b = napis(end)\n",
     "c = napis(2:2:end)\n",
-    "d = napis'"
+    "d = napis(1:5)'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Ćwiczenie** napisz funkcję `anagram(s)`, która dla podanego napisu (wyrazu) zwróci jego anagram (przestawi znaki w losowej kolejności) "
+    "**Ćwiczenie** napisz funkcję `anagram(s)`, która dla podanego napisu (wyrazu) zwróci jego anagram (przestawi znaki w losowej kolejności).  \n",
+    "Wskazówka: funkcja `randperm()` zwraca losową permutację liczb całkowitych"
    ]
   },
   {
@@ -86,7 +87,10 @@
     }
    },
    "source": [
-    "## Macierze napisów"
+    "## Macierze znaków\n",
+    "\n",
+    "* macierz zawierająca napis (tablicę znaków) w każdym wierszu\n",
+    "* długość wierszy musi być taka sama"
    ]
   },
   {
@@ -108,7 +112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Funkcja `char(s1, s2, ...)` tworzy macierz z łańcuchów `s1`, `s2`, itd. "
+    "Funkcja `char(s1, s2, ...)` tworzy macierz z napisów `s1`, `s2`, itd. "
    ]
   },
   {
@@ -120,8 +124,8 @@
     "X = [ 'Ala' ; 'Zuzanna']  \n",
     "\n",
     "whos\n",
-    "% uwaga: w Matlab ta operacja powoduje bład, nie zgadzają się długości napisów. W Octave pierwszy wiersz jest uzupełniony spacjami\n",
-    "% Dotworzenia macierzy znakowej mozna wykorzystać char(), który uzupełni krótsze linie spacjami\n",
+    "% uwaga: w Matlab ta operacja powoduje błąd, nie zgadzają się długości napisów. W Octave pierwszy wiersz jest uzupełniony spacjami\n",
+    "% Do tworzenia macierzy znakowej można wykorzystać char(), który uzupełni krótsze linie spacjami\n",
     "\n",
     "X = char('Ala', 'Zuzanna', 'Hermenegilda')"
    ]
@@ -134,10 +138,10 @@
     }
    },
    "source": [
-    "## Łączenie napisow\n",
+    "## Łączenie napisów\n",
     "\n",
     "* łączenie napisów (concatenation)  `[napis1 napis2]` \n",
-    "* funkcja `strcat(napis1, napis2)`"
+    "* funkcja `strcat(napis1, napis2)` "
    ]
   },
   {
@@ -170,9 +174,9 @@
     }
    },
    "source": [
-    "## Łaczenie napisów wertykalne\n",
+    "## Łączenie napisów wertykalnie\n",
     "\n",
-    "* łaczenie napisów wertykalne (dodawnie wierszy) `[napis1 ; napis2]` \n",
+    "* łaczenie napisów wertykalne (dodawanie wierszy) `[napis1 ; napis2]`   \n",
     "* funkcja `strvcat(napis1, napis2)`"
    ]
   },
@@ -184,8 +188,10 @@
    "source": [
     "a = 'Raz';\n",
     "b = 'Dwa';\n",
-    "c = 'Trzy';\n",
-    "x = [a ; b; c]"
+    "c = 'Trzy'; \n",
+    "\n",
+    "% w Matlab problem bo wiersze o różnej długości\n",
+    "x = [a ; b; c]     "
    ]
   },
   {
@@ -194,7 +200,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "% w Matlab działa, krótsze wiersze zostają uzupełnione spacjami \n",
     "y = strvcat(a, b, c)\n",
+    "\n",
     "whos a b c x y"
    ]
   },
@@ -208,7 +216,7 @@
    "source": [
     "## Typ znakowy\n",
     "\n",
-    "* znaki są kodowane za pomoca liczb całkowitych (kod ASCII)\n",
+    "* znaki są kodowane za pomocą liczb całkowitych (kod ASCII)\n",
     "* `char(liczba)` zwraca symbol kodowany daną liczbą\n",
     "* `double(znak)` zwraca liczbę kodującą znak"
    ]
@@ -239,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Ćwiczenie** wypisz wartości numeryczne i odpowiadjające symbole kodu ASCII dla znaków kodowanych od 1 do 127 "
+    "**Ćwiczenie:** wypisz wartości numeryczne i odpowiadające symbole kodu ASCII dla znaków kodowanych od 1 do 127 "
    ]
   },
   {
@@ -255,7 +263,7 @@
     "* `char(10)`\n",
     "* `newline`  (brak w Octave)\n",
     "* `sprintf('\\n')`\n",
-    "* uwaga: w Windows na koncu linii są 2 bajty `\\r\\n` \n"
+    "* uwaga: w Windows na końcu linii są 2 bajty `\\r\\n` \n"
    ]
   },
   {
@@ -271,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Ćwiczenie:** spardź kod ASCII znaku powrotu katerki `\\r`"
+    "**Ćwiczenie:** wyświetl wartość liczbową kodu ASCII odpowiadającą znakowi powrotu karetki `\\r`"
    ]
   },
   {
@@ -286,16 +294,18 @@
     "\n",
     "Funkcja | Opis |\n",
     ":-|:-|\n",
-    "`strcat()` `strvcat`| łączenie napisów |  \n",
+    "`strcat()` `strvcat()`| łączenie napisów |  \n",
     "`blanks(N)` | tworzy napis (wektor) białych znaków (spacji)  |\n",
     "`sprintf()` | tworzenie napisów z formatowanymi wartościami |\n",
     "`strcmp(A, B)` | porównywanie napisów |\n",
     "`strtrim(x)`     | usuwa białe znaki z poczatku i z końca napisu | \n",
-    "`lower(x)`       | zamiana znakow na małe litery |\n",
-    "`upper(x)`       | zamiana znakow na wielkie litery |\n",
-    "`findstr(s1, s1)` | szuka wzorca `s2` w napisie `s1` |\n",
-    "`strrep(s, w, x)` | zamienia w napisie `s` wystapienia wzorca `w` na `x` |\n",
-    "`strtok(s, d)`    | dzieli napis `s` na częsci oddzieone separatorem `d` |"
+    "`lower(x)`       | zamiana znaków na małe litery |\n",
+    "`upper(x)`       | zamiana znaków na wielkie litery |\n",
+    "`findstr(s1, s2)` | szuka wzorca `s2` w napisie `s1` |\n",
+    "`strrep(s, w, x)` | zamiana w napisie `s` wystąpienia wzorca `w` na `x` |\n",
+    "`strtok(s, d)`    | dzieli napis `s` na części oddzielone separatorem `d` |\n",
+    "\n",
+    "W Matlab zobacz `help strfun`"
    ]
   },
   {
@@ -329,8 +339,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b = ['Ala' blanks(10) 'ma' blanks(10) 'kota']\n",
-    "c = ['Ala' ; blanks(10)' ; 'ma' blanks(10) 'kota']"
+    "b = ['Ala' blanks(5) 'ma' blanks(5) 'kota']\n",
+    "c = ['Ala' ; blanks(5)' ; 'ma' blanks(5) 'kota']\n",
+    "\n",
+    "% w Matlab raczej to\n",
+    "c = char('Ala', blanks(5)','ma',blanks(5), 'kota')"
    ]
   },
   {
@@ -343,7 +356,7 @@
    "source": [
     "## sprintf\n",
     "\n",
-    "działa identycznie jak `printf` ale wynikowy napis jest zwracany (nie wyswietlany)"
+    "działa identycznie jak `fprintf` ale wynikowy napis jest zwracany (nie wyświetlany)"
    ]
   },
   {
@@ -387,7 +400,9 @@
     }
    },
    "source": [
-    "## strtrim"
+    "## strtrim\n",
+    "\n",
+    "usuwa białe znaki z początku i końca napisu"
    ]
   },
   {
@@ -430,7 +445,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Ćwicznie** jak zamieninić w napisie duże litery na małe bez uzywania funkcji `lower` ?"
+    "**Ćwiczcie** zamień w napisie duże litery na małe bez używania funkcji `lower` ?"
    ]
   },
   {
@@ -444,7 +459,7 @@
     "## Porównywanie napisów\n",
     "\n",
     "* funkcja `strcmp(S1, S2)` zwraca 1 gdy napisy `s1` i `s2` są identyczne \n",
-    "* funkcja `strcmpi(S1, S2)` zwraca 1 gdy napisy `s1` i `s2` są różnią sie wyłacznie wielkością liter \n",
+    "* funkcja `strcmpi(S1, S2)` zwraca 1 gdy napisy `s1` i `s2` różnią sie wyłącznie wielkością liter \n",
     "\n"
    ]
   },
@@ -459,7 +474,7 @@
     "y = 'abcD'\n",
     "\n",
     "a = x == y \n",
-    "b = x < y\n",
+    "b = x < y    % porównywanie wartości liczbowych w macierzach\n",
     "\n",
     "c = strcmp(x, y)\n",
     "\n",
@@ -597,7 +612,7 @@
     ":-|:-|\n",
     "`int2str(x)` | zamiana liczby całkowitej na napis |\n",
     "`num2str(x)` | zamiana liczby na napis  |\n",
-    "`sprintf()`  | równiez pozwala na zamiane liczby na napis |\n",
+    "`sprintf()`  | również pozwala na zmiane liczby na napis |\n",
     "`str2num(s)`  | zamiana napisu na liczbę |`"
    ]
   },
@@ -608,7 +623,7 @@
    "outputs": [],
    "source": [
     "a = int2str(65)\n",
-    "double(a)\n",
+    "double(a)     % 54 to cyfra '6', wartość 53 to cyfra '5'\n",
     "printf('%s\\n', a)"
    ]
   },
@@ -660,7 +675,7 @@
     "x = 'Ala ma kota'\n",
     "sort(x)\n",
     "\n",
-    "x = ['Ala' ; 'ma' ; 'kota']\n",
+    "x = ['Ala' ; 'ma ' ; 'psa']\n",
     "sort(x, 2)"
    ]
   },
@@ -674,12 +689,7 @@
    "source": [
     "## Zadanie 7. Szyfr\n",
     "\n",
-    "Napisz funkcję o nazwe `dekoduj()`, która dla podanego w wrgumencie napisu wykonuje nastepujące operacje:\n",
-    "* wszystkie znaki przystankowe zamieniane sa na znak spacji - nie zmienione pozostają wyłącznie litery, cyfry oraz spacje\n",
-    "* wszystkie duże litery zamieniane są na małe \n",
-    "* wielokrotne spacje w uzyskanym napisie są zastepowane pojedynczą spacją \n",
-    "* z uzyskanego napisu wybierane są pierwsze litery z wyrazów\n",
-    "Jeżeli argumentem jest macierz znakowa to wynikiem bdzie macierz znakowa o rakiej samej licznie wierszy, gdzie każdy wiersz został poddany opisanym wyżej operacjom"
+    "Napisz funkcję o nazwe `dekoduj()`, która odszyfruje wiadomość ukrytą w pierwszych literach wyrazów podanego napisu. Dla podanego w argumencie funkcji łańcucha znakowego zawierającego dowolnie długi tekst funkcja zwraca łancuch znakowy zawierający litery początkowe wyrazów. Wynik zawiera wyłacznie małe litery, jeżeli pierwsza litera wejściowego wyrazu była duża to zamieniamy ją na małą. Wyrazem jest dowolny ciąg składający się z liter (dużych lub małych) lub cyfr. Zwróć uwagę na to, że tekst może zawierać wiele innych znaków z kodu ASCII (np. `#$\\_`), które mogą oddzielać wyrazy (ciągi liter i cyfr). W przypadku, gdy użytkownik wywoła funkcję bez podania argumentu wejściowego lub poda więcej argumentów niż 1 wówczas funkcja wyświetli stosowany komunikat błędu za pomocą funkcji `error()`. Komunikat błedu pojawi się również, gdy podany argument nie będzie tablicą znakową.\n"
    ]
   },
   {
@@ -690,22 +700,17 @@
     }
    },
    "source": [
-    "Przykład działania:\n",
+    "Przykładowo, wywołanie funkcji\n",
     "```\n",
     "dekoduj('Ala ma kota');\n",
-    "````\n",
-    "zwróci napis `'amk'.\n",
+    "```\n",
+    "zwróci napis `'amk'`\n",
     "\n",
+    "Inny przykład, dla danej tablicy `x`\n",
     "```\n",
-    "x = ['    abc  b3 _)(*^%' '   abc   abc    ABC']\n",
-    "dekoduj(x)\n",
+    "x = '  **mbnv,AaA[(T)]     l123|A||B  '\n",
     "```\n",
-    "zwróci macierz\n",
-    "\n",
-    "```\n",
-    "[ 'ab' ;\n",
-    "  'aaa' ]\n",
-    "```"
+    "wywołanie funkcji `dekoduj(x)` zwróci napis `'matlab'`"
    ]
   }
  ],
