--- a/08_lab.ipynb
+++ b/08_lab.ipynb
@@ -10,11 +10,172 @@
    "source": [
     "# Operacje na plikach\n",
     "\n",
-    "* funkcja ``load`` i ``save`` - wczytywanie i zapis zmiennych Matlaba\n",
-    "* funkcja ``load`` odczytuje wiele formatów tekstowych (np.: ``dat``, ``csv``), dane jednego typu w postaci tabeli (identyczna ilość wartości w każdym wierszu)\n",
-    "* funkcje specjalistyczne: ``imread`` , ``imwrite``, ``xlsread``, ``xlswrite``\n",
-    "* ``importdata`` - wiele formatów (ASCII, csv, jpg, xls, ...)\n",
-    "* dane w innym formacie -> operacje I/O niskopoziomowe  \n"
+    "* pliki o określonym formacie (csv, dat, PNG, mp3) - funkcje wysokopoziomowe\n",
+    "  * ``load``, ``save`` - wczytywanie i zapis zmiennych Matlaba oraz plików tekstowych o tabelarycznej strukturze\n",
+    "  * ``imread``, ``imwrite`` - pliki grficzne (PNG, JPG, ...)\n",
+    "  * ``xlsread``, ``xlswrite`` - arkusze kalkulacyjne Excel\n",
+    "  * ``dlmread``, ``dlmwrite`` - pliki tektowe w tabelarycznej formie z separatorem\n",
+    "  * ``importdata`` - wiele formatów (ASCII, csv, jpg, xls, ...)\n",
+    "* pliki z nieokreśloną strukturą -> operacje I/O niskopoziomowe\n",
+    "  * ``fopen``, ``fprintf``, ``fscanf``, ...\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Funckje load i save\n",
+    "\n",
+    "* ``save 'nazwa_pliku' `` zapisuje wszystkie zminne do plik ``.m``\n",
+    "* ``save 'nazwa_pliku', x`` zapis zmiennej ``x`` do pliku ``.m``\n",
+    "* ``save 'nazwa_pliku' x '--ascii'`` zapis xmiennej ``x`` w postaci tekstowej"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = rand(3,5);\n",
+    "save 'zmienna'  x;\n",
+    "z = load('zmienna');\n",
+    "z"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Zapis w postaci tekstowej"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "x = rand(3,5);\n",
+    "save 'zmienna2.dat'  x  -ascii;\n",
+    "z = load('zmienna2.dat');\n",
+    "whos z\n",
+    "type 'zmienna2.dat'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Odczyt obrazów\n",
+    "\n",
+    "* ``imread('nazwa_pliku')`` odczyt pliku o podanej nazwie (JPEG, PNG, inne, ...)\n",
+    "* ``imfinfo('nazwa_pliku')`` informacje o opbrazie (np. szerokość i wysokość)\n",
+    "* ``imwrite(X, 'nazwa_pliku')`` zapis macierzy ``X`` w postaci pliku graficznego (format okreslony rozszerzeniem)\n",
+    "* ``imshow(X)``  wyświetla obraz zapisany w macierzy ``X``\n",
+    "* ``image(X)``  wyświetla zawartość macierzy w postaci obrazu (wartości mapowane sa na kolory pikseli)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "% odczyt obrazu\n",
+    "x = imread('Lenna.png');\n",
+    "whos x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imshow(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info = imfinfo('Lenna.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "image(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "% adres URL zamiast nazwy pliku\n",
+    "x = imread('https://wydzialy.umk.pl/_szablony/grafika/logo5.png');\n",
+    "image(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = 255 - x;\n",
+    "image(y);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "% zapis macierzy w pliku graficznym\n",
+    "imwrite(y, 'logo.bmp');\n",
+    "imfinfo('logo.bmp')"
    ]
   },
   {
