--- a/08_lab.ipynb
+++ b/08_lab.ipynb
@@ -30,9 +30,9 @@
    "source": [
     "## Funckje load i save\n",
     "\n",
-    "* ``save 'nazwa_pliku' `` zapisuje wszystkie zminne do plik ``.m``\n",
-    "* ``save 'nazwa_pliku', x`` zapis zmiennej ``x`` do pliku ``.m``\n",
-    "* ``save 'nazwa_pliku' x '--ascii'`` zapis xmiennej ``x`` w postaci tekstowej"
+    "* ``save 'nazwa_pliku' `` zapisuje wszystkie zminne (całą przestrzeń roboczą) do pliku \n",
+    "* ``save 'nazwa_pliku', x`` zapis zmiennej ``x`` do pliku \n",
+    "* ``save 'nazwa_pliku' x --ascii`` zapis xmiennej ``x`` do pliku w postaci tekstowej"
    ]
   },
   {
@@ -42,9 +42,20 @@
    "outputs": [],
    "source": [
     "x = rand(3,5);\n",
-    "save 'zmienna'  x;\n",
+    "% zapis do pliku\n",
+    "save 'zmienna.mat' x;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "% odczyt z pliku\n",
     "z = load('zmienna');\n",
-    "z"
+    "disp(z)\n",
+    "whos z x"
    ]
   },
   {
@@ -69,7 +80,20 @@
    "outputs": [],
    "source": [
     "x = rand(3,5);\n",
-    "save 'zmienna2.dat'  x  -ascii;\n",
+    "\n",
+    "save 'zmienna2.dat'  x  -ascii"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
     "z = load('zmienna2.dat');\n",
     "whos z\n",
     "type 'zmienna2.dat'"
@@ -102,8 +126,10 @@
    },
    "outputs": [],
    "source": [
-    "% odczyt obrazu\n",
+    "% Plik Lenna.png można pobrać ze strony https://en.wikipedia.org/wiki/Lenna\n",
+    "% Odczyt pliku graficznego\n",
     "x = imread('Lenna.png');\n",
+    "\n",
     "whos x"
    ]
   },
@@ -113,6 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "% Wyswietlenie obrazu\n",
     "imshow(x)"
    ]
   },
@@ -122,7 +149,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "% Informacje o pliku graficznym\n",
     "info = imfinfo('Lenna.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "% Wizualiacja elementów macierzy \n",
+    "y = rand(100, 200) * 255;\n",
+    "image(y)"
    ]
   },
   {
@@ -150,6 +193,7 @@
    "source": [
     "% adres URL zamiast nazwy pliku\n",
     "x = imread('https://wydzialy.umk.pl/_szablony/grafika/logo5.png');\n",
+    "whos x\n",
     "image(x)"
    ]
   },
@@ -159,8 +203,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "% Odwrócenie kolorów (negatyw)\n",
     "y = 255 - x;\n",
-    "image(y);"
+    "image(y(:,:,1));"
    ]
   },
   {
@@ -174,8 +219,23 @@
    "outputs": [],
    "source": [
     "% zapis macierzy w pliku graficznym\n",
-    "imwrite(y, 'logo.bmp');\n",
+    "imwrite(y(1:200,1:200,1), 'logo.bmp');\n",
     "imfinfo('logo.bmp')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "% podgląd zapisanego pliku\n",
+    "x = imread('logo.bmp');\n",
+    "image(x)"
    ]
   },
   {
@@ -205,9 +265,8 @@
    "source": [
     "## Otwieranie i zamykanie plików\n",
     "\n",
-    "* ``fopen( 'nazwa', 'tryb' )`` otwiera plik o podanej nazwie.  \n",
-    "W przypadku niepowodzenia funkcja zwraca wartość ``-1``.  \n",
-    "Tryby:\n",
+    "* ``fopen( 'nazwa', 'tryb' )`` otwiera plik o podanej nazwie. W przypadku niepowodzenia funkcja zwraca wartość ``-1``.  \n",
+    "* Tryb otworzenia pliku:\n",
     "  * ``'r'`` odczyt (domyślna wartość)\n",
     "  * ``'w'`` zapis (poprzednia zawartość pliku zostaje skasowana)\n",
     "  * ``'a'`` dodawanie zawartości na końcu instniejącego pliku\n",
@@ -248,7 +307,11 @@
     "## Operacje odczytu z pliku\n",
     "\n",
     "* ``fscanf(fid, 'format')`` wczytuje dane do macierzy zgodnie z zadanym formatem   \n",
-    "``%f`` double, ``%d`` int, ``%s`` napis, ``%c`` znak. Znaki zamieniane są na wartości kodu ASCII \n",
+    "* Format:\n",
+    "  * ``%f`` double, liczby rzeczywiste, \n",
+    "  * ``%d`` int, liczby całkowite, \n",
+    "  * ``%s`` napis, \n",
+    "  * ``%c`` znak. \n",
     "* ``textscan(fid, 'format')`` wczytuje dane do macierzy komórkowej zgodnie z podanym formatem \n",
     "* ``fgets(fid)``, ``fgetl(fid)`` wczytują linię tekstu z pliku \n",
     "* ``feof(fid)`` czy koniec pliku?"
@@ -346,7 +409,9 @@
     }
    },
    "source": [
+    "Okreslenie rozmiaru  macierzy wyjściowej (liczby wczytanych wartości)  \n",
     "``fscanf(fid, 'format', rozmiar)``\n",
+    "\n",
     "* rozmiar ``N`` wczyta okresloną liczbę wartości\n",
     "* rozmiar ``[N M]`` wczyta ``NxM`` wartości do macierzy \n",
     "* rozmiar ``[N Inf]`` wczyta wszystkie wartości do macierzy o ``N`` wierszach"
@@ -401,14 +466,17 @@
    "outputs": [],
    "source": [
     "fid = fopen('plik1.dat');\n",
+    " y = 0 \n",
     "if fid ~= -1\n",
     "   while feof(fid) == 0\n",
     "      linia = fgetl(fid);\n",
-    "      [x s]=strtok(linia);\n",
+    "      [x s] = strtok(linia);\n",
     "      fprintf('x=%f s=%s\\n', str2num(x), s);\n",
+    "      y = y + str2num(x);\n",
     "   end\n",
     "   fclose(fid);\n",
-    "end"
+    "end\n",
+    "disp(y)"
    ]
   },
   {
@@ -527,7 +595,7 @@
     "if fid ~= -1\n",
     "    fprintf(fid, 'Witaj Świecie\\n');\n",
     "    for i=1:10\n",
-    "        fprintf(fid, '%d do potęgi 2 wynosi %d\\n', i, i^2);\n",
+    "        fprintf(fid, '%d do potęgi 2 wynosi %f\\n', i, i^2);\n",
     "    end\n",
     "    fclose(fid);\n",
     "end"
@@ -683,7 +751,9 @@
     "\n",
     "Dwa pierwsze argumenty funkcji ``szyfr`` (nazwy plików) są obowiązkowe. W przypadku, gdy uzytkonik nie poda trzeciego argumentu wówczas liczba kolumn macierzy szyfrującej bedzie równa wartości $\\sqrt{N}$ zaokrąglonej do liczby całkowitej, gdzie $N$ jest ilością wszystkich znaków w wiadomości do zaszyfrowania. \n",
     "\n",
-    "W przypadku, gdy plik podany w pierszym argumencie nie istnieje, funkcja wyświetla stosowany komunikat błedu i skrypt kończy działanie. \n"
+    "W przypadku, gdy plik podany w pierszym argumencie nie istnieje, funkcja wyświetla stosowany komunikat błedu i skrypt kończy działanie. \n",
+    "\n",
+    "Uwaga: wystarczające jest aby prpgram obsługiwal poprawnie znaki z kodu ASCII."
    ]
   }
  ],
